# oop_project_doom_alike

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.hpp  main_old.cpp  walls.hpp
code/: CMakeLists.txt  character.cpp  character.hpp  constants.hpp  game_logic.cpp  game_logic.hpp  main.cpp  map.cpp  map.hpp  render.cpp  render.hpp  scene3d.cpp  scene3d.hpp  walls.hpp  window.cpp  window.hpp
docs/: .$OOPE_USE_CASE.drawio.bkp  .$OOP_ERD.drawio.bkp  .$OOP_PROBLEM_DOMAIN.drawio.bkp  OOP_ERD.drawio  OOP_ERD.xml  OOP_PROBLEM_DOMAIN.drawio  OOP_PROBLEM_DOMAIN.xml  OOP_USE_CASE.drawio  OOP_USE_CASE.xml  analise.md  implementacao.md  projeto.md  testes.md
